--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
   - title: "<i class='fas fa-search'></i>"
     url: /search/
 
-  - title: "<i class='fa fa-flash'></i>"
+  - title: "<i class='fas fa-bolt'></i>"
     url: /flash/
 
 ord_og_gram:
