--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title                    : "Danskundervisning"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Young Man"
-description              : "This is not Søren Kierkegaard."
+description              : "Jeg er ikke Søren Kierkegaard."
 url                      : "https://TongCHEN779.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/dansk" # the subpath of your site, e.g. "/blog"
 repository               : "TongCHEN779/dansk" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
