--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -76,6 +76,10 @@ lytte:
         url: /lytte/kina_75_aar/
       - title: "Højt til Loftet"
         url: /lytte/hoejt_til_loftet/
+      - title: "Kongerækken - Historien om Havnen"
+        url: /lytte/kongeraekken_historien_om_havnen/
+      - title: "Kongerækken - Historien om Tyskland"
+        url: /lytte/kongeraekken_historien_om_tyskland/
       - title: "Nytårstaler"
         url: /lytte/nytaarstaler/
       - title: "Sangen"
