--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -76,8 +76,18 @@ lytte:
         url: /lytte/kina_75_aar/
       - title: "Højt til Loftet"
         url: /lytte/hoejt_til_loftet/
+      - title: "Kongerækken - Danmark og Islam"
+        url: /lytte/kongeraekken_danmark_og_islam/
+      - title: "Kongerækken - Den Fransk-tyske Krig"
+        url: /lytte/kongeraekken_den_fransk_tyske_krig/
+      - title: "Kongerækken - Grundloven"
+        url: /lytte/kongeraekken_grundloven/
       - title: "Kongerækken - Historien om Havnen"
         url: /lytte/kongeraekken_historien_om_havnen/
+      - title: "Kongerækken - Historien om Kina"
+        url: /lytte/kongeraekken_historien_om_kina/
+      - title: "Kongerækken - Historien om Rusland"
+        url: /lytte/kongeraekken_historien_om_rusland/
       - title: "Kongerækken - Historien om Tyskland"
         url: /lytte/kongeraekken_historien_om_tyskland/
       - title: "Nytårstaler"
